--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,36 @@
 # Preface {.unnumbered}
 
-This is a Quarto book.
+《数据驱动的可重复性研究》课程旨在教授学生如何在科学研究中实现数据驱动的可重复性，确保研究结果的可验证性和可靠性。
 
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
+## 课程目标
+
+-   理解数据驱动的可重复性研究的概念和重要性
+-   掌握相关工具和技术，能够实施可重复性研究
+-   培养数据分析和代码编写的能力，提高科研水平
+
+## 课程特色
+
+-   强调数据和代码的规范化，确保可重复性
+-   以项目为导向，关注实际应用场景
+-   注重实践操作，强调动手能力
+
+## 课堂组织形式
+
+因为选课场地限制，无法提供机房。请选课的同学自行准备电脑，并根据课程进度安排，确保电脑上安装了 R、Python 等需要用到的软件。
+
+-   课堂讲解：介绍相关概念、方法和工具
+-   实践操作：通过实际案例进行动手实践
+-   小组讨论：学生之间进行交流与协作
+-   课后作业：巩固所学知识，提高实践能力
+
+## 如何分组？
+
+-   请研究生们根据自己的实验室或者研究方向，自行分组，每组人数不超过 10 人。
+-   在第二次课程开始前，请在雨课堂内确认分组。
+
+## 如何考察？
+
+-   使用课程中教授的技能，创建一个数据分析、软件开发、研究复现等类型的项目
+-   1 - 5 人一组共创一个项目，将项目代码移交到[课程仓库](https://github.com/D2RS-2025spring)（使用 transfer 的方法）
+-   项目可以以课程建设为立足点，为[课程课件](https://github.com/D2RS-2025spring/data-driven-reproducible-study)提出改进意见。
+-   需要保证每个人在项目中都有贡献（通过 Git 追踪）。
