--- a/intro.qmd
+++ b/intro.qmd
@@ -1,130 +1,51 @@
-# 课程简介
+# 课程项目简介
 
-《数据驱动的可重复性研究》课程旨在教授学生如何在科学研究中实现数据驱动的可重复性，确保研究结果的可验证性和可靠性。
+## 项目一：配置可重复的数据分析环境（2学时）
 
-## 课程基本信息
-
-### 课程目标
-
--   理解数据驱动的可重复性研究的概念和重要性
--   掌握相关工具和技术，能够实施可重复性研究
--   培养数据分析和代码编写的能力，提高科研水平
-
-### 课程特色
-
--   强调数据和代码的规范化，确保可重复性
--   以项目为导向，关注实际应用场景
--   注重实践操作，强调动手能力
-
-### 课堂组织形式
-
-因为选课场地限制，无法提供机房。请选课的同学自行准备电脑，并根据课程进度安排，确保电脑上安装了 R、Python 等需要用到的软件。
-
--   课堂讲解：介绍相关概念、方法和工具
--   实践操作：通过实际案例进行动手实践
--   小组讨论：学生之间进行交流与协作
--   课后作业：巩固所学知识，提高实践能力
-
-#### 如何分组？
-
--   请研究生们根据自己的实验室或者研究方向，自行分组，每组人数不超过 10 人。
--   在第二次课程开始前，请在雨课堂内确认分组。
-
-#### 如何考察？
-
--   使用课程中教授的技能，创建一个数据分析、软件开发、研究复现等类型的项目
--   1 - 5 人一组共创一个项目，将项目代码提交到[课程仓库](https://github.com/D2RS-2025spring)
--   项目可以以课程建设为立足点，为[课程课件](https://github.com/D2RS-2025spring/data-driven-reproducible-study)提出改进意见。
--   需要保证每个人在项目中都有贡献（通过 Git 追踪）。
-
-## 课程所含项目
-
-### 项目一：可重复的数据分析环境（2学时）
-
-#### 主要内容
-
-- 可重复性危机与其影响因素
-  - 科学研究中的可重复性问题
-  - 可重复性危机的成因
-  - 可重复性危机的后果
-- 可重复性研究的定义与重要性
-  - 实验设计与数据收集的可重复性（实验方法、数据格式、数据预处理）
-  - 数据分析与结果解释的可重复性（数据分析方法、结果解释、可视化）
-- 数据分析中的可重复性要求
-  - 数据和代码的规范化（路径、命名、版本、注释）
-  - 数据和代码文档编写（README、文档、报告）
-  - 数据分析及可视化的结果复现（代码、数据、结果）
-- 可重复性研究的工具链
-  - 计算平台（CPU/GPU）
-  - CPU架构（x86/AMD64/ARM）
-  - GPU加速技术（CUDA/MPS）
-  - 操作系统（Linux/Windows/MacOS）
-  - 文件系统、权限与环境变量
-  - 终端及命令行
-  - 软件体系
-    - 可执行的编译程序
-    - 源代码
-    - 库文件
-  - 编程语言（R/Python）
-  - 版本控制（Git、GitHub、Gitee）
-  - 认证系统（SSH、API Key）
-  - 软件包管理（conda、renv）
-  - 依赖关系
-  - 源码编译安装
-  - 文档系统（Markdown、Quarto）
-  - 现代工具（AI辅助编程、R包开发、持续性集成）
-
-#### 上手实操
+### 上手实操
 
 在自己电脑上配置一个可重复的数据分析环境。
 
-#### 课后作业
+### 课后作业
 
 - 确保电脑上安装了 R、Python 等需要用到的软件
 - 请在雨课堂内完成分组（第二次上课时确认）
 - 请与助教取得联系，建立学习小组
 
-### 项目二：R 语言统计分析和可视化基础（2学时）
-
-#### 主要内容
+## 项目二：R 语言统计分析和可视化基础（2学时）
 
 以 ISME J 的论文数据为例[@gao2021]，介绍分组数据统计分析和可视化的技巧。
+
+### 论文简介
 
 -   研究背景
 -   科学问题
 -   结果与分析
 
-#### 上手实操
-
-以 ISME J 的论文数据为例[@gao2021]，介绍分组数据统计分析和可视化的技巧，包括以下内容：
+### 上手实操
 
 -   `ggplot2` 软件包及图形语法
 -   统计分析的数学基础
-    -   有参检验：t 检验和 anova
-    -   无参检验：wilcox.test 和 kruskal.test
 -   数据集的介绍
 -   `ggpubr` 软件包的应用
-    -   分组比对、统计和可视化
--   `pheatmap` 绘制热图
-    -   数据预处理
-    -   数据分组和标记
 
-#### 课后作业
+
+### 课后作业
 
 -   阅读论文，并且查阅 GitHub 仓库，在自己电脑中复现论文中的分析结果
 -   将分析结果整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
 
-### 项目三：转录组学数据分析和可视化（4学时）
-
-#### 主要内容
+## 项目三：转录组学数据分析和可视化（4学时）
 
 以 ISME Communications 的论文数据为例[@gao2021a]，介绍转录组学数据分析的技巧。
+
+### 论文简介
 
 - 研究背景
 - 科学问题
 - 转录组学分析的基本原理
 
-#### 上手实操
+### 上手实操
 
 1.  转录组学分析流程
     -   数据预处理
@@ -138,22 +59,67 @@
     2.  如何安装 Bioconductor 软件包
 3.  基因功能数据库（KEGG、GO、CAZyme、ARG、COG）
 
-#### 课后作业
+### 课后作业
 
 -   阅读论文，并且查阅 GitHub 仓库，在自己电脑中复现论文中的分析结果
 -   将分析结果整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
 
-### 项目四：手搓神经网络模型（4学时）
+
+## 项目四：微生物组数据分析及可视化（4学时）
+
+本项目基于 dada2 软件包提供的示例数据，展示如何使用 R 语言进行微生物组数据分析及可视化。
+
+### 主要内容
+
+-   dada2 软件包介绍
+-   微生物组数据分析流程
+-   微生物组数据可视化
+
+### 上手实操
+
+-   安装 dada2 软件包
+-   加载示例数据
+
+
+### 课后作业
+
+-   请将代码整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
+
+
+## 项目五：大模型的API调用（4学时）
+
+本项目将展示如何利用大模型的API调用，实现文本生成、对话、翻译、代码生成等任务。
+
+### 主要内容
+
+- Huggingface
+- OpenAI（ChatAnywhere）
+- 阿里云百炼
+
+### 上手实操
+
+- 使用 R 调用 OpenAI API
+- 使用 Python 调用 OpenAI API
+- 使用 R 和 Python 调用 HuggingFace API
+- 使用 R 和 Python 调用阿里云百炼 API
+
+### 课后作业
+
+- 申请阿里云百炼 API KEY，配置 Chatbox 桌面应用
+- 使用 Chatbox 桌面应用，选择 DeepSeek 模型，与 AI 对话
+
+
+## 项目六：手搓神经网络模型（4学时）
 
 本项目将展示如何利用 PyTorch 从零开始构建一个神经网络模型，以解决手写字母识别问题。
 
-#### 主要内容
+### 主要内容
 
 1.  神经网络模型基础
 2.  手写字母识别的历史
 3.  评估模型的准确率
 
-#### 上手实操
+### 上手实操
 
 1.  配置一个可用的 Conda 环境
 2.  安装需要的软件 Pytorch 和 torchvision
@@ -161,12 +127,11 @@
 4.  从零搭建一个神经网络模型
 5.  评估模型的准确率
 
-#### 课后作业
+### 课后作业
 
--   请将代码整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
--   Pytorch 中还配发有其他可用的神经网络模型，请尝试一下其他模型（如 VGG19），并评估其准确率
+-   将模型替换为其他模型，如 VGG19，并评估其针对于同一数据集预测时准确率。
 
-### 项目五：利用拉曼光谱识别病原菌（4学时）
+## 项目七：利用拉曼光谱识别病原菌（4学时）
 
 本项目将展示如何利用 R 和 Python 进行拉曼光谱数据的处理和分析，以识别病原菌。
 
@@ -184,15 +149,15 @@
 4.  拉曼光谱数据的分析
 5.  利用 ResNet 进行分类
 
-#### 课后作业
+### 课后作业
 
 -   请将代码整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
 
-### 项目六：人工智能API应用（4学时）
+## 项目七：人工智能 API 调用（4学时）
 
 本项目介绍如何调用通用大语言模型执行任务。通用人工智能大模型（GPT）是近年来人工智能领域的重要进展，它能够理解和生成自然语言，执行各种任务，如回答问题、生成文本、翻译、对话等。本项目将介绍如何使用 GPT 模型执行任务，包括以下内容：
 
-#### 主要内容
+### 主要内容
 
 1.  通用人工智能大模型的历史和现状
     1.  Bilibili 视频
@@ -222,7 +187,17 @@
 
 -   请将代码整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
 
-### 项目七：机器学习算法及实现（4学时）
+
+### 项目八：计算机视觉分析实验图片（4学时）
+
+#### 主要内容
+
+#### 上手实操
+
+#### 课后作业
+
+
+### 项目九：机器学习算法及实现（4学时）
 
 本项目以 Science 论文为例[@chang2023]，展示如何利用机器学习算法识别细菌类型。
 
@@ -238,7 +213,7 @@
 
 -   请将代码整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
 
-### 项目八：与全世界开发者协作（4学时）
+### 项目九：与全世界开发者协作（4学时）
 
 本项目将展示如何使用 GitHub 进行版本控制，利用 GitHub Issue 与开发者沟通，利用 GitHub Pull Request 贡献代码，以及利用 GitHub Actions 实现自动化部署。
 
@@ -278,7 +253,7 @@
 -   使用 Git 管理自己的代码，并提交到 GitHub 上；
 -   在课程 GitHub 群组提交 GitHub Issue，完成交作业任务。
 
-### 项目九：开发 R 包（4学时）
+### 项目十：开发 R 包（4学时）
 
 本项目以 ggVennDiagram 软件包开发为例，展示如何使用工具进行 R 包开发。
 
@@ -312,7 +287,7 @@
 
 -   写一个 R 包，并发布到 GitHub/Gitee 上
 
-### 项目十：现代工具与展望（4学时）
+### 项目十一：现代工具与展望（4学时）
 
 -   Quarto文档系统
     -   多语言支持
@@ -325,20 +300,3 @@
     -   文档体系建设
     -   成果展示与分享
 
-### 项目十一：微生物组数据分析及可视化（4学时）
-
-本项目基于 Science 论文[@goldford2018]，展示如何使用 R 语言进行微生物组数据分析及可视化。
-
-#### 主要内容
-
-#### 上手实操
-
-#### 课后作业
-
-### 项目十二：计算机视觉分析实验图片（4学时）
-
-#### 主要内容
-
-#### 上手实操
-
-#### 课后作业
