--- a/slides/lecture1-intro.qmd
+++ b/slides/lecture1-intro.qmd
@@ -25,17 +25,23 @@ bibliography:
 Speaker notes go here.
 :::
 
+--------------------------------------------------------------------------------
+
 ## 课程目标
 
 -   理解数据驱动的可重复性研究的概念和重要性
 -   掌握相关工具和技术，能够实施可重复性研究
 -   培养数据分析和代码编写的能力，提高科研水平
 
+--------------------------------------------------------------------------------
+
 ## 课程特色
 
 -   强调数据和代码的规范化，确保可重复性
 -   以项目为导向，关注实际应用场景
 -   注重实践操作，强调动手能力
+
+--------------------------------------------------------------------------------
 
 ## 课堂组织形式
 
@@ -46,16 +52,22 @@ Speaker notes go here.
 -   **小组讨论**：学生之间进行交流与协作
 -   **课后作业**：巩固所学知识，提高实践能力
 
+--------------------------------------------------------------------------------
+
 ## 如何分组？
 
 -   请研究生们根据自己的实验室或者研究方向，自行分组，每组人数不超过 10 人。
 -   在第二次课程开始前，请在雨课堂内确认分组。
+
+--------------------------------------------------------------------------------
 
 ## 如何考察？
 
 -   使用课程中教授的技能，创建一个数据分析、软件开发、研究复现等类型的项目
 -   3 - 5 人一组共创一个项目，将项目代码提交到[课程仓库](https://github.com/D2RS-2025spring)
 -   需要保证每个人在项目中都有贡献（通过 Git 追踪）。
+
+--------------------------------------------------------------------------------
 
 ## 上课时间
 
@@ -69,10 +81,14 @@ Speaker notes go here.
 -   时间：自 2025-02-17 至 2025-03-20，每周一、周四晚上
 -   地点：相约三教阶梯教室 S2
 
+--------------------------------------------------------------------------------
+
 ## 项目驱动
 
 -   每次课程围绕一个独立但相互关联的项目展开
 -   所有项目可分为 4 个模块
+
+--------------------------------------------------------------------------------
 
 ## 四个模块
 
@@ -81,7 +97,11 @@ Speaker notes go here.
 -   人工智能模块：借助人工智能工具进行数据分析
 -   开发协作模块：与全世界开发者协作，开发自己的软件包
 
+--------------------------------------------------------------------------------
+
 # 课程项目一览
+
+--------------------------------------------------------------------------------
 
 ## 环境搭建模块
 
@@ -91,6 +111,8 @@ Speaker notes go here.
 2. 可重复的数据分析环境
 3. 现代工具链
 
+--------------------------------------------------------------------------------
+
 ## 数据分析模块
 
 数据分析模块的项目内容包括：
@@ -99,15 +121,19 @@ Speaker notes go here.
 5.  转录组学数据分析和可视化
 6.  微生物组数据分析及可视化
 
+--------------------------------------------------------------------------------
+
 ## 人工智能模块
 
 人工智能模块的项目内容包括：
 
-7.  机器学习算法及实现
-8.  手搓神经网络模型
-9.  利用拉曼光谱识别病原菌
-10. 调用通用大语言模型执行任务
+7. 调用通用大语言模型执行任务
+8. 机器学习算法及实现
+9. 手搓神经网络模型
+10. 利用拉曼光谱识别病原菌
 11. 计算机视觉辅助分析实验图片
+
+--------------------------------------------------------------------------------
 
 ## 开发协作模块
 
@@ -116,25 +142,37 @@ Speaker notes go here.
 12. 与全世界开发者协作
 13. 开发 R 包
 
+--------------------------------------------------------------------------------
+
 # 课程大纲
+
+::: {.notes}
+-   课程大纲及讲授内容会根据实际情况进行调整   
+:::
+
+--------------------------------------------------------------------------------
 
 ## 环境搭建模块
 
 1.  **电脑硬件和操作系统**【自备】
-    1.  推荐使用 Linux/WSL 系统
+    -   推荐使用 Linux/WSL 系统
 2.  **可重复的数据分析环境**
-    1.  安装脚本语言工具 `R` & `RStudio`
-    2.  安装 `tidyverse`、`ggpubr` 等 R 包
-    3.  安装 `Conda` & `Python`
-    4.  安装 `Git`，注册 `GitHub`/`Gitee` 账号
-    5.  安装 VSCode、JupyterLab、Quarto 等工具
-3. **现代工具链**
-    1.  Markdown 和 Latex
-    2.  R Markdown 和 JupyterLab
-    3.  Quarto 文档
-    4.  Git 和 GitHub/Gitee
-    5.  AI 代码编辑器
+    -   安装脚本语言工具 `R` & `RStudio`
+    -   安装 `tidyverse`、`ggpubr` 等 R 包
+    -   安装 `Conda` & `Python`
+    -   安装 `Git`，注册 `GitHub`/`Gitee` 账号
+    -   安装 VSCode、JupyterLab、Quarto 等工具
 
+--------------------------------------------------------------------------------
+
+3. **现代工具链**
+    -   Markdown 和 Latex
+    -   R Markdown 和 JupyterLab
+    -   Quarto 文档
+    -   Git 和 GitHub/Gitee
+    -   AI 代码编辑器
+
+--------------------------------------------------------------------------------
 
 ## 数据分析模块
 
@@ -142,74 +180,80 @@ Speaker notes go here.
 
     以 2021 年发表在 ISME J 的论文为例，讲解统计分析和可视化的方法 [@gao2021b]。
 
-    1.  `ggplot2` 软件包及图形语法
-    2.  统计分析的数学基础
-    3.  示例数据集的介绍
-    4.  `ggpubr` 软件包的应用
-    5.  分组比对、统计和可视化
+    -   `ggplot2` 软件包及图形语法
+    -   统计分析的数学基础
+    -   示例数据集的介绍
+    -   `ggpubr` 软件包的应用
+    -   分组比对、统计和可视化
 
-## 数据分析模块
+--------------------------------------------------------------------------------
 
 5.  **转录组学数据分析和可视化**
 
     以 2021 年发表在 ISME Communications 的论文为例，讲解转录组学数据分析和可视化的方法 [@gao2021a]。
 
-    1.  转录组学分析的基本原理
-    2.  `Bioconductor` 软件（`DESeq2`、`ClusterProfiler`、`enrichplot`）
-    3.  基因功能数据库（`KEGG`、`GO`、`CAZyme`、`ARG`、`COG`）
-    4.  富集分析和 `GSEA` 分析
+    -   转录组学分析的基本原理
+    -   `Bioconductor` 软件（`DESeq2`、`ClusterProfiler`、`enrichplot`）
+    -   基因功能数据库（`KEGG`、`GO`、`CAZyme`、`ARG`、`COG`）
+    -   富集分析和 `GSEA` 分析
 
-## 数据分析模块
+--------------------------------------------------------------------------------
 
 6.  **微生物组数据分析及可视化**
 
-    以胡脊梁的研究数据为例，讲解微生物组数据分析和可视化的方法。
+    以 dada2 软件包提供的示例数据为例，讲解微生物组数据分析和可视化的方法。
 
-    1.  以胡脊梁的研究数据为例
+    1.  dada2 软件包介绍
+    2.  微生物组数据分析流程
+    3.  微生物组数据可视化
+
+--------------------------------------------------------------------------------
 
 ## 人工智能模块
 
-7.  **机器学习算法及实现**
+7.  **调用通用大语言模型执行任务**
+    -   HuggingFace 和 Modelscope
+    -   ChatGPT 和 ChatGLM
+    -   模型性能评估（评测数据集、标准及测评工具Inspect）
+
+--------------------------------------------------------------------------------
+
+8.  **机器学习算法及实现**
 
     以熔解曲线数据建模为例，讲解机器学习算法及实现的方法。
 
-    1.  线性回归及其变种
-    2.  决策树、随机森林
-    3.  以熔解曲线数据建模为例
+    -   线性回归及其变种
+    -   决策树、随机森林
+    -   以熔解曲线数据建模为例
 
-## 人工智能模块
+--------------------------------------------------------------------------------
 
-8.  **手搓神经网络模型**
+9.  **手搓神经网络模型**
 
     以手写字母识别为例，从零搭建一个 LeNet 神经网络模型。
 
-    1.  神经网络模型基本概念
-    2.  评估模型的准确率
+    -   神经网络模型基本概念
+    -   评估模型的准确率
 
-## 人工智能模块
+--------------------------------------------------------------------------------
 
-9.  **利用拉曼光谱识别病原菌**
+10.  **利用拉曼光谱识别病原菌**
 
     以发表在 Nature Communications 上的一篇论文为例，讲解拉曼光谱+残差网络的应用[@ho2019]。
 
     1.  拉曼光谱技术
     2.  ResNet 及残差网络
 
-## 人工智能模块
-
-10.  **调用通用大语言模型执行任务**
-    1.  HuggingFace 和 Modelscope
-    2.  ChatGPT 和 ChatGLM
-    3.  模型性能评估（评测数据集、标准及测评工具Inspect）
-
-## 人工智能模块
+--------------------------------------------------------------------------------
 
 11. **计算机视觉分析实验图片**
 
     以植物图片分割为例，讲解如何使用计算机视觉技术分析实验图片。
 
-    1.  分割植株及背景
-    2.  评价植物生长情况
+    -   分割植株及背景
+    -   评价植物生长情况
+
+--------------------------------------------------------------------------------
 
 ## 开发协作模块
 
@@ -217,22 +261,22 @@ Speaker notes go here.
 
     讲解如何使用 GitHub 自动化，交流和创建网站。
 
-    1.  Fork、Pull Request
-    2.  GitHub Actions
-    3.  GitHub Issues
-    4.  使用 Quarto 创建网站
-    5.  部署 Netlify 静态网站
+    -   Fork、Pull Request
+    -   GitHub Actions
+    -   GitHub Issues
+    -   使用 Quarto 创建网站
+    -   部署 Netlify 静态网站
 
-## 开发协作模块
+--------------------------------------------------------------------------------
 
 13. **开发 R 包**
 
     以 ggVennDiagram 软件包开发为例，讲解如何开发软件包，让别人可以用来“复现”你的工作[@R-ggVennDiagram]。
 
-    1.  devtools
-    2.  CRAN/Bioconductor
+    -   devtools
+    -   CRAN/Bioconductor
 
-
+--------------------------------------------------------------------------------
 
 ## References
 
