add bacteria ID

--- a/slides/lecture1-intro.qmd
+++ b/slides/lecture1-intro.qmd
@@ -101,6 +101,10 @@ Speaker notes go here.
 
 # 课程项目一览
 
+::: {.callout-note}
+项目内容及讲授顺序会根据实际情况进行调整。
+:::
+
 --------------------------------------------------------------------------------
 
 ## 环境搭建模块
@@ -146,8 +150,8 @@ Speaker notes go here.
 
 # 课程大纲
 
-::: {.notes}
--   课程大纲及讲授内容会根据实际情况进行调整   
+::: {.callout-note}
+课程大纲及讲授内容会根据实际情况进行调整。
 :::
 
 --------------------------------------------------------------------------------
@@ -274,6 +278,8 @@ Speaker notes go here.
     以 ggVennDiagram 软件包开发为例，讲解如何开发软件包，让别人可以用来“复现”你的工作[@R-ggVennDiagram]。
 
     -   devtools
+    -   usethis
+    -   Roxygen2
     -   CRAN/Bioconductor
 
 --------------------------------------------------------------------------------
