add chapter Raman

--- a/references.bib
+++ b/references.bib
@@ -133,21 +133,8 @@ TLDR: It is shown that the initial ratio can induce emergent properties in cocul
 	langid = {en}
 }
 
-@article{gao2021c,
-	title = {The initial inoculation ratio regulates bacterial coculture interactions and metabolic capacity},
-	author = {Gao, Chun-Hui and Cao, Hui and Cai, Peng and {Sørensen}, {Søren J.}},
-	year = {2021},
-	month = {01},
-	date = {2021-01},
-	journal = {ISME Journal},
-	pages = {29--40},
-	volume = {15},
-	number = {1},
-	doi = {10.1038/s41396-020-00751-7},
-	url = {https://www.nature.com/articles/s41396-020-00751-7},
-	note = {tex.ids= gaoInitialInoculationRatio2020, gaoInitialInoculationRatio2020a
-number: 1
-publisher: Nature Publishing Group
-TLDR: It is shown that the initial ratio can induce emergent properties in coculture and not only impacts the reproducibility of coculture experiments but also can influence the understanding of generic microbial ecology.},
+@misc{csho33/b,
+	title = {csho33/bacteria-ID: Source code and demos for {"}Rapid identification of pathogenic bacteria using Raman spectroscopy and deep learning{"}},
+	url = {https://github.com/csho33/bacteria-ID},
 	langid = {en}
 }
