--- a/intro.qmd
+++ b/intro.qmd
@@ -153,51 +153,16 @@
 
 -   请将代码整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
 
-## 项目七：人工智能 API 调用（4学时）
-
-本项目介绍如何调用通用大语言模型执行任务。通用人工智能大模型（GPT）是近年来人工智能领域的重要进展，它能够理解和生成自然语言，执行各种任务，如回答问题、生成文本、翻译、对话等。本项目将介绍如何使用 GPT 模型执行任务，包括以下内容：
+## 项目八：计算机视觉分析实验图片（4学时）
 
 ### 主要内容
 
-1.  通用人工智能大模型的历史和现状
-    1.  Bilibili 视频
-2.  API 调用的基础知识
-    1.  OpenAI API 的使用
-    2.  API KEY 的获取和管理
-3.  人工智能大模型哪里找？
-    1.  HuggingFace
-    2.  Modelscope
-    3.  ollama
-4.  ChatGPT 和 ChatGLM
-5.  提示词工程
-6.  响应解析与处理
-7.  模型性能评估（评测数据集、标准及测评工具Inspect）
+### 上手实操
 
-#### 上手实操
-
-使用 R 和 Python 调用 OpenAI API，实现以下功能：
-
-1.  使用 R 调用 OpenAI API
-2.  使用 Python 调用 OpenAI API
-3.  使用 R 和 Python 调用 OpenAI API
-4.  使用 R 和 Python 调用 HuggingFace API
-5.  使用 ollama 在本地部署大模型
-
-#### 课后作业
-
--   请将代码整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
+### 课后作业
 
 
-### 项目八：计算机视觉分析实验图片（4学时）
-
-#### 主要内容
-
-#### 上手实操
-
-#### 课后作业
-
-
-### 项目九：机器学习算法及实现（4学时）
+## 项目九：机器学习算法及实现（4学时）
 
 本项目以 Science 论文为例[@chang2023]，展示如何利用机器学习算法识别细菌类型。
 
@@ -205,35 +170,23 @@
 2.  决策树、随机森林
 3.  以熔解曲线数据建模为例
 
-#### 主要内容
+### 上手实操
 
-#### 上手实操
-
-#### 课后作业
+### 课后作业
 
 -   请将代码整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
 
-### 项目九：与全世界开发者协作（4学时）
+## 项目十：与全世界开发者协作（4学时）
 
 本项目将展示如何使用 GitHub 进行版本控制，利用 GitHub Issue 与开发者沟通，利用 GitHub Pull Request 贡献代码，以及利用 GitHub Actions 实现自动化部署。
 
-#### 主要内容
+### 主要内容
 
 1.  Git 介绍
-    1.  Git 基础
-    2.  Git 命令
-    3.  Git 分支
-    4.  Git 远程仓库
-    5.  Git 标签
-    6.  Git 工作流
 2.  GitHub 介绍
-    1.  GitHub Issues
-    2.  GitHub Fork
-    3.  GitHub Pull Request
-    4.  GitHub Actions
 3.  Git 与 GitHub 的关系
 
-#### 上手实操
+### 上手实操
 
 1.  安装 Git
 2.  配置 Git
@@ -248,12 +201,12 @@
 11. 使用 GitHub Pull Request
 12. 使用 GitHub Actions
 
-#### 课后作业
+### 课后作业
 
 -   使用 Git 管理自己的代码，并提交到 GitHub 上；
 -   在课程 GitHub 群组提交 GitHub Issue，完成交作业任务。
 
-### 项目十：开发 R 包（4学时）
+## 项目十一：开发 R 包（4学时）
 
 本项目以 ggVennDiagram 软件包开发为例，展示如何使用工具进行 R 包开发。
 
@@ -283,11 +236,11 @@
     -   发布到 GitHub
     -   从 GitHub 中安装 R 包
 
-#### 课后作业
+### 课后作业
 
 -   写一个 R 包，并发布到 GitHub/Gitee 上
 
-### 项目十一：现代工具与展望（4学时）
+## 项目十一：现代工具与展望（4学时）
 
 -   Quarto文档系统
     -   多语言支持
