--- a/grouped-data-analysis-in-action.qmd
+++ b/grouped-data-analysis-in-action.qmd
@@ -1,6 +1,6 @@
 # 分组数据分析实战
 
-在这一部分，将以 [@gao2021c]论文中的数据分析为例，展示分组数据分析和可视化的重复性研究。首先，我们简单介绍一下论文的研究背景、方法和主要结果。然后，使用原始数据进行可重复研究，通过复现论文中的图片，展示分组数据分析和可视化的重复性研究。
+在这一部分，将以 [@gao2021]论文中的数据分析为例，展示分组数据分析和可视化的重复性研究。首先，我们简单介绍一下论文的研究背景、方法和主要结果。然后，使用原始数据进行可重复研究，通过复现论文中的图片，展示分组数据分析和可视化的重复性研究。
 
 ## 论文研究概述
 
