--- a/pretrained-model.qmd
+++ b/pretrained-model.qmd
@@ -33,7 +33,6 @@ num_blocks = [block_size] * layers
 input_dim = 1000
 in_channels = 64
 n_classes = 30 # instead of 30, we use the 8 empiric groupings
-os.environ['CUDA_VISIBLE_DEVICES'] = '{}'.format(0)
 
 
 # Load trained weights for demo
@@ -49,8 +48,12 @@ elif torch.backends.mps.is_available():
 else:
     device = torch.device("cpu")
 
+# 载入模型权重
 cnn.load_state_dict(torch.load('./finetuned_model.ckpt', 
         map_location=lambda storage, loc: storage))
+
+# 将模型移动到指定设备
+cnn.to(device)
 ```
 
 ## 模型结构解析
@@ -159,6 +162,106 @@ for name, module in cnn.named_modules():
 
 ## 使用模型进行预测
 
+现在我们使用训练好的模型进行预测，并报告每个菌株的准确率。这个数字应该接近图2中报告的82.2%，但由于在微调过程中对微调数据集进行了随机采样，所以不会完全相同。
+
+```{python}
+import numpy as np
+
+# 载入数据
+X = np.load('./data/X_test.npy')
+y = np.load('./data/y_test.npy')
+
+# 打印数据形状
+print(X.shape, y.shape)
+```
+
+
+在这个例子中，我们没有使用 DataLoader，而是直接将整个数据集 `X` 转换为张量，并将其传递给模型进行预测。
+
+
+```{python}
+#| cache: true
+cnn.eval()
+
+X_tensor = torch.tensor(X, dtype=torch.float32)
+X_tensor = X_tensor.unsqueeze(1)
+X_tensor = X_tensor.to(device)
+
+with torch.no_grad():
+    preds = cnn(X_tensor)
+```
+
+打印预测准确性。
+
+```{python}
+# 计算准确性
+y_hat = preds.argmax(dim=1).cpu().numpy()
+acc = (y_hat == y).mean()
+print('Accuracy: {:0.1f}%'.format(100*acc))
+```
+
+
+## 绘制混淆矩阵
+
+### 读取菌株名称
+
+`config.py` 文件中定义了菌株名称，现在把这些定义读取出来，重新绘制混淆矩阵。
+
+```{python}
+import config
+
+# 读取菌株名称顺序
+order = config.ORDER
+
+# 读取菌株名称
+strains = config.STRAINS
+
+# 打印菌株名称顺序
+print(order)
+
+# 打印菌株名称
+print(strains)
+```
+
+将 `y` 和 `y_hat` 中的数字编号使用 `order` 调整顺序后，再转变为 `STRAINS` 中的菌株名称，绘制混淆矩阵。
+
+
+```{python}
+from sklearn.metrics import confusion_matrix
+
+# 计算混淆矩阵
+conf_matrix = confusion_matrix(y, y_hat, labels=order)
+
+# 获取标签名称
+label_names = [strains[i] for i in order]
+
+# 绘制带有菌株名称的混淆矩阵
+plt.figure(figsize=(10, 8))
+
+# 创建热图
+ax = sns.heatmap(conf_matrix, 
+            annot=True, 
+            fmt='d', 
+            cmap='YlGnBu',
+            xticklabels=label_names,
+            yticklabels=label_names)
+
+# 将x轴标签移到顶部
+ax.xaxis.set_ticks_position('top')
+ax.xaxis.set_label_position('top')
+
+plt.xticks(rotation=45, ha='left')
+plt.yticks(rotation=0)
+plt.xlabel('Predicted')
+plt.ylabel('True')
+
+# 调整布局以防止标签被切掉
+plt.tight_layout()
+plt.show()
+```
+
+## 模型预测细节
+
 ### 切换工作模式
 
 在 PyTorch 中，你可以通过检查模型的 `.training` 属性来查看模型当前是在训练模式还是在评估模式。这个属性是一个布尔值，当模型处于训练模式时为 `True`，而在评估模式（也就是说，进行推理时）为 `False`。
@@ -168,6 +271,7 @@ for name, module in cnn.named_modules():
 在实际应用中，确保在进行模型评估、验证或测试时调用 `model.eval()` 来获得正确的预测结果是非常重要的。
 
 ```{python}
+#| message: false
 # 切换模型模式
 cnn.eval()
 ```
@@ -215,71 +319,26 @@ print(cnn(test).shape)
 ```
 
 
-## 测试数据
+### 获取预测结果
 
-载入测试数据。
-
-```{python}
-import numpy as np
-
-# 载入测试数据
-X_test = np.load('./data/X_test.npy')
-y_test = np.load('./data/y_test.npy')
-```
-
-打印输入数据和标签的形状。
+原始的预测结果为 `preds`，是一个形状为 `(3000, 30)` 的张量，表示每个样本属于每个类别的概率。
 
 ```{python}
-print(X_test.shape, y_test.shape)
+# 打印预测结果的形状
+print(preds.shape)
+
+# 打印预测结果
+print(preds[1, :])
 ```
 
-运行模型进行预测。
+使用 `torch.argmax` 获取预测结果。`argmax` 返回的是最大值的索引，而不是最大值本身。
 
 ```{python}
-X_test_tensor = torch.tensor(X_test, dtype=torch.float32)  # 确保数据类型为 float32
+# 获取预测结果
+y_hat = preds.argmax(dim=1).cpu().numpy()
 
-# 调整形状为 [batch_size, channels, length]
-# 这里 batch_size = 3000, channels = 1, length = 1000
-X_test_tensor = X_test_tensor.unsqueeze(1)  # 添加一个维度，变为 [3000, 1, 1000]
-
-# 使用模型进行预测
-with torch.no_grad():
-    y_pred = cnn(X_test_tensor)  # 这一步会比较耗时
+# 打印预测结果
+print(y_hat)
 ```
-
-绘制混淆矩阵。   
-
-```{python}
-from sklearn.metrics import confusion_matrix, classification_report
-from matplotlib import pyplot as plt
-import seaborn as sns
-
-# 将预测结果转换为类别
-y_pred_class = np.argmax(y_pred, axis=1).numpy()
-
-# 计算混淆矩阵
-conf_matrix = confusion_matrix(y_test, y_pred_class)
-
-# 绘制混淆矩阵
-plt.figure(figsize=(10, 8))
-sns.heatmap(conf_matrix, annot=True, fmt='d', cmap='Blues', xticklabels=range(30), yticklabels=range(30))
-plt.xlabel('Predicted')
-plt.ylabel('True')
-plt.title('Confusion Matrix')
-plt.show()
-```
-
-绘制准确率。
-
-```{python}
-# 计算准确率
-accuracy = np.sum(y_pred_class == y_test) / len(y_test)
-
-# 打印结果
-print(f"准确率: {accuracy}")
-```
-
-
-
 
 
